Fixed Footer Content Spacing

--- a/src/App.css
+++ b/src/App.css
@@ -409,7 +409,7 @@ footer .footer-content a {
   .footer-content,
   .dark-mode .footer-content{
     max-width: 100%;
-    margin-top: 40vh;
+    margin-top: 4vh;
     display: flex;
     justify-content: space-around; /* Adjust spacing between items */
     align-items: center; /* Vertically center items */
